--- a/src/style/Contacts.css
+++ b/src/style/Contacts.css
@@ -1,57 +1,159 @@
-/* .a{
-    color: #F16529;
-    font-family: "Hammersmith One";
-    font-size: 24px;
-    line-height: normal;
-}
-.p{
-color: #B5B5B5;
-font-family: "Lato";
-font-size: 16px;
-line-height: 27px;
-width: 28rem; 
+.man{
+  padding-left:   1.4rem;
+  /* margin-top: 5rem; */
+
 }
 
+.navbar{
+    background-color: #212529;
+    padding-left: 1.7rem !important;
+    height: 5rem;
+    
+    
+}
+.a {
+  color: #f16529;
+  font-family: "Hammersmith One";
+  font-size: 24px;
+  line-height: normal;
+  margin-top: 4rem;
+}
+.nav{
+  padding: 1.2rem;
+  padding-left: 4rem !important;
+
+}
+.p {
+  color: #b5b5b5;
+  font-family: "Lato";
+  /* font-size: px; */
+  line-height: 30px;
+  width: 40rem;
+}
+.msm {
+  position: relative;
+  left: -1.4rem;
+  top: 0.8rem;
+}
+.Gh{
+  position: relative;
+  left: 7rem;
+  bottom: 1.3rem;
+}
+.gh1{
+  margin-left: -2.6rem;
+  margin-bottom: 3rem;
+}
+.sm{
+  margin-bottom: 3rem !important;
+  
+  }
+
+.contact {
+  color: #b5b5b5;
+  font-family: "Hammersmith One";
+  font-size: 23px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  gap: 0.5rem;
+  padding-top:  3rem;
+  
+}
+.mass{
+  position: relative;
+  left: 2.8rem;
+  
+}
+
+.b {
+  color: #fff;
+  font-family: "Hammersmith One";
+  /* font-size: 51px; */
+}
+.projects {
+  background: #404040;
+  width: 260px;
+  height: 240px;
+}
+.info {
+  width: 26rem;
+  padding-top: 3.5rem;
+}
+
+.p2 {
+  width: 207px;
+  height: 118px;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  font-family: "Hammersmith One";
+  font-size: 27px;
+  font-weight: 300;
+  padding-top: 2rem;
+}
+.p3 {
+  padding-top: 2rem;
+  gap: 2rem;
+}
+.p4 {
+  height: 0.7rem;
+  margin-left: -0.3rem;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+}
+@media (max-width: 428px) {
+  .a {
+    margin-top: 4rem;
+    margin-left: 1rem;
+    margin-bottom: 1.3rem;
+  }
+  .b{
+    margin-bottom: 2rem;
+  }
+  .image{
+    margin-bottom: 2.3rem;
+    margin-top: -0rem;
+  }
+  .navbar{
+    background-color: #212529;
+    padding-left: 1.6rem !important;
+  }
+  .p {
+    width: 21rem;
+  }
+  .info {
+    width: 21.5rem;
+  }
+  .msm {
+    margin-left: -2rem;
+  
+  }
+ .route{
+  margin-bottom: 4rem;
+ }
+ .main{
+  padding-left: -0rem;
+}
 .contact{
-    color: #B5B5B5;
-    font-family: "Hammersmith One";
-    font-size: 23px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    gap: 0.5rem;
-    }
-.b{
- color: #FFF;
-font-family: "Hammersmith One";
-font-size: 51px;
+  margin-left: 1.4rem;
+  padding-top: 1rem;
+}
+.Gh{
+  margin-left: -0.6rem;
+  margin-top: 1.2rem;
+}
+.sm{
+  margin-top: -8rem;
+}
+.body{
+  margin-left: 0.1rem;
+}
+.pic{
+  display: none;
+}
 
 }
- .projects{
-        background: #404040;
-        width: 260px;
-        height: 240px;
-    
-    }
-    
-    .p2{
-        width: 207px;
-        height: 118px;
-        flex-direction: column;
-        justify-content: center;
-        color: #FFF;
-        font-family: "Hammersmith One";
-        font-size: 27px;
-        font-weight: 300;
-        padding-top: 2rem;
-        
-    }
-    .p3{
-        padding-top: 2rem;
-        gap: 2rem;
-    }
-    .p4{
-        height: 0.7rem;
-        margin-left: -0.3rem;
-
-    } */
